Fix table alignment issues in class details pane
Resolves #28

--- a/app/assets/stylesheets/bioportal.css.scss
+++ b/app/assets/stylesheets/bioportal.css.scss
@@ -834,10 +834,6 @@ li.ac_over > .obsolete_class {
   word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
-.concept_details .slot_labels {
-  font-style: italic;
-}
-
 #format_specific_options td {
   border-top: 1px solid #C1DAD7;
 }
